; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_tlsthrd.c____w64_mingwthr_add_key_dtor.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/startup/extr_tlsthrd.c____w64_mingwthr_add_key_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { void (i8*)*, %struct.TYPE_3__*, i32 }

@__mingwthr_cs_init = common dso_local global i64 0, align 8
@__mingwthr_cs = common dso_local global i32 0, align 4
@key_dtor_list = common dso_local global %struct.TYPE_3__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @___w64_mingwthr_add_key_dtor(i32 %0, void (i8*)* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca void (i8*)*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  store i32 %0, i32* %4, align 4
  store void (i8*)* %1, void (i8*)** %5, align 8
  %7 = load i64, i64* @__mingwthr_cs_init, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %29

10:                                               ; preds = %2
  %11 = call i64 @calloc(i32 1, i32 24)
  %12 = inttoptr i64 %11 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %6, align 8
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %14 = icmp eq %struct.TYPE_3__* %13, null
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  store i32 -1, i32* %3, align 4
  br label %29

16:                                               ; preds = %10
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 2
  store i32 %17, i32* %19, align 8
  %20 = load void (i8*)*, void (i8*)** %5, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  store void (i8*)* %20, void (i8*)** %22, align 8
  %23 = call i32 @EnterCriticalSection(i32* @__mingwthr_cs)
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** @key_dtor_list, align 8
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i32 0, i32 1
  store %struct.TYPE_3__* %24, %struct.TYPE_3__** %26, align 8
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  store %struct.TYPE_3__* %27, %struct.TYPE_3__** @key_dtor_list, align 8
  %28 = call i32 @LeaveCriticalSection(i32* @__mingwthr_cs)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %16, %15, %9
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
